--- a/logowanie.html
+++ b/logowanie.html
@@ -12,7 +12,7 @@
                 <h2>Strona Logowania</h2>
             </div>
             <div class="item b">
-                <form name="formularz1" action="logowanie.php" method="POST">
+                <form name="formularz1" action="log.php" method="POST">
                     <input type="text" name="user" placeholder="login">
                     <input type="password" name="haslo" placeholder="haslo">
                     <input type="submit" value="Zaloguj">
