--- a/startowa.html
+++ b/startowa.html
@@ -9,7 +9,7 @@
 <body>
     <div class="grid">
         <div class="item a">
-            <h1 class="tytul">Strona by Łukasz Madeja</h1>
+            <a class="menu" href="pytania.html">Egzamin EE09</a>
         </div>
         <div class="item b">
             <a class="menu" href="logowanie.html">Zaloguj</a>
